# slicer

./: README.md  package-lock.json  package.json  vite.config.ts
public/: GridLite 1x1.stl  baseplate-1x1.stl  cone.stl  cube.stl  studio_small_03_compressed.exr
src/: App.tsx  ImagePreview.tsx  Stl.tsx  previewStore.ts
src/export/: constants.ts  goo.ts  reportProgress.ts  toGrayscale.ts  worker.ts  workerApi.ts
src/lib/slicer/: BoundingBox.test.ts  BoundingBox.ts  ExPolygon.ts  ExPolygonCollection.ts  ExtrusionEntityCollection.ts  Layer.ts  LayerHeightSpline.ts  Line.ts  Model.test.ts  Model.ts  MultiPoint.ts  Point.test.ts  Point.ts  Polygons.ts  Polyline.ts  PolylineCollection.ts  Print.ts  PrintConfig.ts  PrintRegion.ts  SurfaceCollection.ts  TransformationMatrix.ts  TriangleMesh.test.ts  TriangleMesh.ts  types.ts
src/lib/slicer/tests/: support_material.test.ts
src/lib/slicer/utils/: directions_parallel.ts
src/lib/slicer/utils/read/: stl.ts
src/utils/: helper.ts  infill.ts  manifold.ts  pointer-events.ts  slicer.ts  supports.ts  types.ts
src/utils/infill/: grid.ts
wasm/: CMakeLists.txt  main.cpp  wasm_app.js  wasm_app.wasm
wasm/include/: libslicer.h
wasm/include/boost/: thread.hpp
